WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50486
WebContextMenuClient::fixMenuReceivedFromOldSafari is no longer needed on Windows
https://bugs.webkit.org/show_bug.cgi?id=50486
Summary
WebContextMenuClient::fixMenuReceivedFromOldSafari is no longer needed on Win...
Brian Weinstein
Reported
2010-12-03 14:10:21 PST
This was added to support using WebKit that supported the Inspect Element context menu item with a Safari that didn't have that functionality. We don't support that old of a Safari anymore, so we can get rid of that code path.
Attachments
[PATCH] Fix
(3.18 KB, patch)
2010-12-03 14:15 PST
,
Brian Weinstein
beidson
: review+
bweinstein
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2010-12-03 14:15:49 PST
Created
attachment 75543
[details]
[PATCH] Fix
Brady Eidson
Comment 2
2010-12-03 14:32:37 PST
Comment on
attachment 75543
[details]
[PATCH] Fix I like the amount of red.
Brian Weinstein
Comment 3
2010-12-03 14:36:45 PST
Landed in
r73305
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug