WebContextMenuClient::fixMenuReceivedFromOldSafari is no longer needed on Windows https://bugs.webkit.org/show_bug.cgi?id=50486

Reviewed by Brady Eidson.

Remove the static fixMenuReceivedFromOldSafari and isPreInspectElementTagSafari methods
from WebContextMenuClient. There were there for when WebKit had the Inspect Element context menu
item, but Safari didn't support it. We don't support that old Safari, so that code can go.

* WebCoreSupport/WebContextMenuClient.cpp:
(WebContextMenuClient::getCustomMenuFromDefaultItems):



Canonical link: https://commits.webkit.org/63728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73305 268f45cc-cd09-0410-ab3c-d52691b4dbfc